--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular5-emojipicker",
+  "name": "ang5-emojipicker",
   "version": "1.2.4",
   "description": "Angular 2 Emoji Picker",
   "main": "index.js",
