--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ang5-emojipicker",
-  "version": "1.2.6",
+  "version": "1.3.0",
   "description": "Angular 2 Emoji Picker",
   "main": "index.js",
   "repository": {
@@ -10,10 +10,10 @@
   "keywords": [
     "angular",
     "angular2",
-    "angular 2",
+    "angular 7",
     "emoji",
     "picker",
-    "angular2 emoji picker"
+    "angular7 emoji picker"
   ],
   "license": "MIT",
   "bugs": {
@@ -21,15 +21,15 @@
   },
   "homepage": "https://github.com/lbertenasco/ng-emoji-picker#readme",
   "dependencies": {
-    "@angular/common": "^5.x.x",
-    "@angular/core": "^5.x.x",
-    "@angular/forms": "^5.x.x",
-    "rxjs": "^5.4.1"
+    "@angular/common": "^7.x.x",
+    "@angular/core": "^7.x.x",
+    "@angular/forms": "^7.x.x",
+    "rxjs": "^6.3.3"
   },
   "devDependencies": {
-    "@angular/compiler": "^5.x.x",
-    "@angular/compiler-cli": "^5.x.x",
-    "typescript": "^2.3.4"
+    "@angular/compiler": "^7.x.x",
+    "@angular/compiler-cli": "^7.x.x",
+    "typescript": "3.1.3"
   },
   "scripts": {
     "build": "rm -rf dist/ && ngc build -p ./tsconfig.json",
